--- a/store-admin/src/main/resources/templates/main.html
+++ b/store-admin/src/main/resources/templates/main.html
@@ -7,5 +7,11 @@
 <body>
     <h1>main</h1>
     <h1 th:text="${#authentication.name}"></h1>
+    <h1 th:text="${#authentication.principal.storeName}"></h1>
+    <h1 th:text="${#authentication.principal.role}"></h1>
+    <br>
+    <h1 th:text="${#authentication}"></h1>
+
+
 </body>
 </html>
