--- a/store-admin/src/main/resources/templates/home.html
+++ b/store-admin/src/main/resources/templates/home.html
@@ -3,30 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>주문 확인</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+</head>
+<body>
+<h2 class="text-center">주문 내역 관리</h2>
+<div id="orderListBox">
+    <table class="table">
+        <colgroup>
+            <col width="40%"/>
+            <col width="23%"/>
+            <col width="30%"/>
+        </colgroup>
+        <thead>
+        <tr class="text-center">
+            <td><b>주문 내역</b></td>
+            <td><b>주문 시간</b></td>
+            <td><b>주문 관리</b></td>
+        </tr>
+        </thead>
+        <tbody >
+        <tr th:each="orderInfo : ${orderList}" class="text-center">
+
+            <td>
+                <div>
+                    <span th:text="${#numbers.formatInteger(orderInfo.amount,4)}+ ' 원'"></span>
+                    <button class="btn" th:onclick="|location.href='@{|/store-order/id/${orderInfo.id}|}'|"> 상세 내역</button>
+                </div>
+            </td>
+            <td>
+                <span th:text="${#temporals.format(orderInfo.orderedAt, 'yyyy-MM-dd HH:mm')}"></span>
+            </td>
+            <td>
+                <div>
+                    <button class="btn btn-dark" th:if="${orderInfo.acceptedAt==null}">주문 취소</button>
+                    <button class="btn btn-dark" th:if="${orderInfo.acceptedAt==null}" th:value="${orderInfo.id}" onclick="acceptOrder(this.value)">수락</button>
+                    <button class="btn btn-dark" th:if="${orderInfo.cookingStartedAt==null and orderInfo.acceptedAt!=null }" th:value="${orderInfo.id}" onclick="acceptOrder(this.value)">조리 시작</button>
+                    <button class="btn btn-dark" th:if="${orderInfo.deliveryStartedAt==null and orderInfo.acceptedAt!=null}" th:value="${orderInfo.id}" onclick="acceptOrder(this.value)">배달 시작</button>
+                    <span th:if="${orderInfo.deliveryStartedAt!=null}" th:text="${#temporals.format(orderInfo.deliveryStartedAt, 'yyyy-MM-dd HH:mm') + '   배달 시작'}"></span>
+                </div>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+</div>
+
     <script th:inline="javascript">
-        let dataList = [];
+
         // SSE 연결
         const url = "http://localhost:8081/api/sse/connect";    // 접속주소
         const eventSource = new EventSource(url);               // sse 연결
 
         eventSource.onopen = event => {
             console.log("sse connection")
-            console.log(dataList)
         }
 
         eventSource.onmessage = event => {
             console.log("receive : "+event.data);
             const data = JSON.parse(event.data);
-<!--            dataList.unshift(data);-->
-<!--            console.log("list : ",dataList);-->
+            let message = "주문이 들어왔어요!! \n\n";
+            let menuResponseList = data.user_order_menu_response_list;
+            menuResponseList.forEach(
+                menu => {
+                    message += (menu.menu_name + ' : '+ menu.count +'개 \n');
+                }
+            )
+
+            let result = confirm(message);
+            if(result){
+                acceptOrder(data.user_order_response.id);
+            }
+        }
+
+        const acceptOrder = (orderId)=>{
+            let url = `/store-order/id/${orderId}`
+
+            $.ajax({
+                url      : url,
+                type     : "POST",
+                contentType : "application/json",
+                dataType : "json",
+                cache   : false,
+                success  : function(result, status){
+                    alert("주문 수락");
+                    location.reload();
+                },
+                error : function(jqXHR, status, error){
+                    if(jqXHR.status == '401'){
+                        alert('로그인 후 이용해주세요');
+                        location.href='/store-user/login';
+                    } else{
+                        alert(jqXHR.responseJSON.message);
+                    }
+                }
+            });
         }
     </script>
-</head>
-<body>
-<h2>home</h2>
-
 </body>
 </html>
