--- a/store-admin/src/main/resources/templates/home.html
+++ b/store-admin/src/main/resources/templates/home.html
@@ -78,30 +78,7 @@
                 acceptOrder(data.user_order_response.id);
             }
         }
-
-        const acceptOrder = (orderId)=>{
-            let url = `/store-order/id/${orderId}`
-
-            $.ajax({
-                url      : url,
-                type     : "POST",
-                contentType : "application/json",
-                dataType : "json",
-                cache   : false,
-                success  : function(result, status){
-                    alert("주문 수락");
-                    location.reload();
-                },
-                error : function(jqXHR, status, error){
-                    if(jqXHR.status == '401'){
-                        alert('로그인 후 이용해주세요');
-                        location.href='/store-user/login';
-                    } else{
-                        alert(jqXHR.responseJSON.message);
-                    }
-                }
-            });
-        }
     </script>
+    <script type="text/javascript" th:src="@{/js/order.js}"></script>
 </body>
 </html>
