--- a/store-admin/src/main/resources/templates/home.html
+++ b/store-admin/src/main/resources/templates/home.html
@@ -1,59 +1,14 @@
 <!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>주문 확인</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/nav}">
+
+<th:block layout:fragment="css">
     <link rel="stylesheet" th:href="@{/css/order.css}">
+</th:block>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<th:block layout:fragment="script">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-</head>
-<body>
-<a class="logo" href="/store-order/">Delivery</a>
-<h2 class="text-center">주문 내역 관리</h2>
-<div id="orderListBox">
-    <table class="table">
-        <colgroup>
-            <col width="45%"/>
-            <col width="25%"/>
-            <col width="30%"/>
-        </colgroup>
-        <thead>
-        <tr class="text-center">
-            <td><b>주문 내역</b></td>
-            <td><b>주문 시간</b></td>
-            <td><b>주문 관리</b></td>
-        </tr>
-        </thead>
-        <tbody >
-        <tr th:each="orderInfo : ${orderList}" class="text-center">
-
-            <td>
-                <div>
-                    <span th:text="${#numbers.formatInteger(orderInfo.amount,4)}+ ' 원'"></span>
-                    <button class="btn" th:onclick="|location.href='@{|/store-order/id/${orderInfo.id}|}'|"> 상세 내역</button>
-                </div>
-            </td>
-            <td>
-                <span th:text="${#temporals.format(orderInfo.orderedAt, 'yyyy-MM-dd HH:mm')}"></span>
-            </td>
-            <td>
-                <div class="btnBox">
-                    <button class="btn btn-secondary" th:if="${orderInfo.acceptedAt==null}" th:value="${orderInfo.id}" onclick="deleteOrder(this.value)">주문 취소</button>
-                    <button class="btn btn-dark" th:if="${orderInfo.acceptedAt==null}" th:value="${orderInfo.id}" onclick="acceptOrder(this.value)">수락</button>
-                    <button class="btn btn-dark" th:if="${orderInfo.cookingStartedAt==null and orderInfo.acceptedAt!=null }" th:value="${orderInfo.id}" onclick="acceptOrder(this.value)">조리 시작</button>
-                    <button class="btn btn-dark" th:if="${orderInfo.deliveryStartedAt==null and orderInfo.cookingStartedAt!=null}" th:value="${orderInfo.id}" onclick="acceptOrder(this.value)">배달 시작</button>
-                    <span th:if="${orderInfo.deliveryStartedAt!=null}" th:text="${#temporals.format(orderInfo.deliveryStartedAt, 'yyyy-MM-dd HH:mm') + '   배달 시작'}"></span>
-                </div>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-
-</div>
-
     <script th:inline="javascript">
 
         // SSE 연결
@@ -82,5 +37,48 @@
         }
     </script>
     <script type="text/javascript" th:src="@{/js/order.js}"></script>
-</body>
+</th:block>
+<div layout:fragment="content">
+    <h2 class="text-center">주문 내역 관리</h2>
+    <div id="orderListBox">
+        <table class="table">
+            <colgroup>
+                <col width="45%"/>
+                <col width="25%"/>
+                <col width="30%"/>
+            </colgroup>
+            <thead>
+            <tr class="text-center">
+                <td><b>주문 내역</b></td>
+                <td><b>주문 시간</b></td>
+                <td><b>주문 관리</b></td>
+            </tr>
+            </thead>
+            <tbody >
+            <tr th:each="orderInfo : ${orderList}" class="text-center">
+
+                <td>
+                    <div>
+                        <span th:text="${#numbers.formatInteger(orderInfo.amount,4)}+ ' 원'"></span>
+                        <button class="btn" th:onclick="|location.href='@{|/store-order/id/${orderInfo.id}|}'|"> 상세 내역</button>
+                    </div>
+                </td>
+                <td>
+                    <span th:text="${#temporals.format(orderInfo.orderedAt, 'yyyy-MM-dd HH:mm')}"></span>
+                </td>
+                <td>
+                    <div class="btnBox">
+                        <button class="btn btn-secondary" th:if="${orderInfo.acceptedAt==null}" th:value="${orderInfo.id}" onclick="deleteOrder(this.value)">주문 취소</button>
+                        <button class="btn btn-dark" th:if="${orderInfo.acceptedAt==null}" th:value="${orderInfo.id}" onclick="acceptOrder(this.value)">수락</button>
+                        <button class="btn btn-dark" th:if="${orderInfo.cookingStartedAt==null and orderInfo.acceptedAt!=null }" th:value="${orderInfo.id}" onclick="acceptOrder(this.value)">조리 시작</button>
+                        <button class="btn btn-dark" th:if="${orderInfo.deliveryStartedAt==null and orderInfo.cookingStartedAt!=null}" th:value="${orderInfo.id}" onclick="acceptOrder(this.value)">배달 시작</button>
+                        <span th:if="${orderInfo.deliveryStartedAt!=null}" th:text="${#temporals.format(orderInfo.deliveryStartedAt, 'yyyy-MM-dd HH:mm') + '   배달 시작'}"></span>
+                    </div>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+    </div>
+</div>
 </html>
