--- a/store-admin/src/main/resources/static/css/order.css
+++ b/store-admin/src/main/resources/static/css/order.css
@@ -35,3 +35,9 @@ body{
 .btnBox > button {
     margin-right : 10px;
 }
+.orderLink {
+    font-size: 21px;
+    text-decoration: none;
+    color : black;
+    margin-right : 8px;
+}
