--- a/store-admin/src/main/resources/templates/order/orderDetail.html
+++ b/store-admin/src/main/resources/templates/order/orderDetail.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>주문 상세 페이지</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/order.css}">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-</head>
-<body>
-    <a class="logo" href="/store-order/" >Delivery</a>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/nav}">
 
+<th:block layout:fragment="css">
+    <link rel="stylesheet" th:href="@{/css/order.css}">
+</th:block>
+
+<th:block layout:fragment="script">
+    <script type="text/javascript" th:src="@{/js/order.js}"></script>
+</th:block>
+
+<div layout:fragment="content">
     <div>
         <div class="orderInfo text-center">
             <span th:text="'주문 시간:'+ ${#temporals.format(order.orderedAt, 'yyyy-MM-dd HH:mm')}"></span><br>
@@ -28,17 +28,21 @@
             <span class="totalAmountRes" th:text="'총 합계 : ' + ${#numbers.formatInteger(order.amount,4)} +'원'"></span>
         </div>
         <div class = "orderStatus text-center">
-            <div class="btnBox">
+            <div class="btnBox" th:if="${order.cancelledAt==null}">
                 <button class="btn btn-dark" th:if="${order.acceptedAt!=null and order.cookingStartedAt==null}" th:value="${order.id}" onclick="acceptOrder(this.value)">조리 시작</button>
                 <button class="btn btn-dark" th:if="${order.deliveryStartedAt==null and order.cookingStartedAt!=null }" th:value="${order.id}" onclick="acceptOrder(this.value)">배달 시작</button>
             </div>
             <span th:text="'주문 시간 :' +${#temporals.format(order.orderedAt,'yyyy-MM-dd HH:mm')}"></span>
-            <span th:if="${order.acceptedAt!=null}" th:text="'수락 시간 :' +${#temporals.format(order.acceptedAt,'yyyy-MM-dd HH:mm')}"></span>
-            <span th:if="${order.cookingStartedAt!=null}" th:text="'조리 시작 :' +${#temporals.format(order.cookingStartedAt,'yyyy-MM-dd HH:mm')}"></span>
-            <span th:if="${order.deliveryStartedAt!=null}" th:text="'배달 시작 :' +${#temporals.format(order.deliveryStartedAt,'yyyy-MM-dd HH:mm')}"></span>
+            <div th:if="${order.cancelledAt==null}">
+                <span th:if="${order.acceptedAt!=null}" th:text="'수락 시간 :' +${#temporals.format(order.acceptedAt,'yyyy-MM-dd HH:mm')}"></span>
+                <span th:if="${order.cookingStartedAt!=null}" th:text="'조리 시작 :' +${#temporals.format(order.cookingStartedAt,'yyyy-MM-dd HH:mm')}"></span>
+                <span th:if="${order.deliveryStartedAt!=null}" th:text="'배달 시작 :' +${#temporals.format(order.deliveryStartedAt,'yyyy-MM-dd HH:mm')}"></span>
+            </div>
+            <div th:unless="${order.cancelledAt==null}">
+                <span th:text="'주문 취소 :' +${#temporals.format(order.cancelledAt,'yyyy-MM-dd HH:mm')}"></span>
+            </div>
         </div>
     </div>
+</div>
 
-    <script type="text/javascript" th:src="@{/js/order.js}"></script>
-</body>
 </html>
