가맹점 - 가게 메뉴 조회

--- a/store-admin/src/main/resources/static/css/nav.css
+++ b/store-admin/src/main/resources/static/css/nav.css
@@ -17,6 +17,17 @@
     font-family: 'SUITE-Regular';
 }
 
+body{
+    max-width : 700px;
+    width : 90%;
+    height : 100vh;
+    margin : auto;
+}
+
+#listBox{
+    width : 100%;
+}
+
 .logo {
     font-size: 40px;
     text-decoration: none;
@@ -43,6 +54,20 @@ ul > li {
 
 .navLink:hover {
     font-size: 23px;
+    text-decoration: none;
+    color: rgb(238, 99, 99);
+    margin-right : 8px;
+}
+
+.orderLink {
+    font-size: 20px;
+    text-decoration: none;
+    color : black;
+    margin-right : 8px;
+}
+
+.orderLink:hover {
+    font-size: 22px;
     text-decoration: none;
     color: rgb(238, 99, 99);
     margin-right : 8px;
