--- a/store-admin/src/main/resources/templates/home.html
+++ b/store-admin/src/main/resources/templates/home.html
@@ -44,7 +44,7 @@
         <a class="orderLink" th:href="@{/store-order(status='cancel')}"> 취소된 주문</a>
         <a class="orderLink" th:href="@{/store-order}"> 진행 중인 주문</a>
     </div>
-    <div id="orderListBox">
+    <div id="listBox">
         <table class="table">
             <colgroup>
                 <col width="45%"/>
@@ -72,8 +72,8 @@
                 </td>
                 <td>
                     <div class="btnBox" th:if="${orderInfo.cancelledAt==null}">
-                        <button class="btn btn-secondary" th:if="${orderInfo.acceptedAt==null}" th:value="${orderInfo.id}" onclick="deleteOrder(this.value)">주문 취소</button>
-                        <button class="btn btn-dark" th:if="${orderInfo.acceptedAt==null}" th:value="${orderInfo.id}" onclick="acceptOrder(this.value)">수락</button>
+                        <button class="btn btn-danger" th:if="${orderInfo.acceptedAt==null}" th:value="${orderInfo.id}" onclick="deleteOrder(this.value)">주문 취소</button>
+                        <button class="btn btn-success" th:if="${orderInfo.acceptedAt==null}" th:value="${orderInfo.id}" onclick="acceptOrder(this.value)">수락</button>
                         <button class="btn btn-dark" th:if="${orderInfo.cookingStartedAt==null and orderInfo.acceptedAt!=null }" th:value="${orderInfo.id}" onclick="acceptOrder(this.value)">조리 시작</button>
                         <button class="btn btn-dark" th:if="${orderInfo.deliveryStartedAt==null and orderInfo.cookingStartedAt!=null}" th:value="${orderInfo.id}" onclick="acceptOrder(this.value)">배달 시작</button>
                         <span th:if="${orderInfo.deliveryStartedAt!=null}" th:text="${#temporals.format(orderInfo.deliveryStartedAt, 'yyyy-MM-dd HH:mm') + '   배달 시작'}"></span>
