--- a/store-admin/src/main/resources/templates/store/menuRegister.html
+++ b/store-admin/src/main/resources/templates/store/menuRegister.html
@@ -43,7 +43,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">가격</span>
             </div>
-            <input type="text" th:field="*{amount}" class="form-control" placeholder="메뉴의 가격을 입력해주세요">
+            <input type="text" th:field="*{price}" class="form-control" placeholder="메뉴의 가격을 입력해주세요">
         </div>
         <div class="form-group" >
             <div class="custom-file img-div">
