가게 이름 검색 추가 , 가맹점 - STYLE 수정

--- a/store-admin/src/main/resources/templates/store/menu.html
+++ b/store-admin/src/main/resources/templates/store/menu.html
@@ -40,7 +40,7 @@
                 </td>
                 <td>
                     <div>
-                        <span th:text="${#numbers.formatInteger(menuInfo.amount,4)}+ ' 원'"></span>
+                        <span th:text="${#numbers.formatInteger(menuInfo.price,4)}+ ' 원'"></span>
                     </div>
                 </td>
                 <td>
