--- a/store-admin/src/main/resources/templates/store/menuRegister.html
+++ b/store-admin/src/main/resources/templates/store/menuRegister.html
@@ -5,6 +5,9 @@
 
 <th:block layout:fragment="css">
     <style>
+        .input-group {
+            margin-bottom : 10px;
+        }
     </style>
 
 </th:block>
