--- a/store-admin/src/main/resources/templates/user/login.html
+++ b/store-admin/src/main/resources/templates/user/login.html
@@ -23,7 +23,7 @@
             <input type="password" id="inputPassword" class="form-control" name="password">
         </div>
         <div>
-            <button class="btn btn-secondary" type="button" >signup</button>
+            <button class="btn btn-secondary" type="button" onclick="location.href='/store-user/register'" >signup</button>
             <button class="btn btn-dark" type="submit">login</button>
         </div>
     </form>
