--- a/store-admin/src/main/resources/templates/user/register.html
+++ b/store-admin/src/main/resources/templates/user/register.html
@@ -38,7 +38,7 @@
 
         <div>
             <button class="btn btn-secondary" type="submit" >signup</button>
-            <button class="btn btn-dark" type="button">login</button>
+            <button class="btn btn-dark" type="button" onclick="location.href='/store-user/login'">login</button>
         </div>
     </form>
 </div>
