--- a/store-admin/src/main/resources/templates/user/login.html
+++ b/store-admin/src/main/resources/templates/user/login.html
@@ -22,6 +22,9 @@
             <label for="inputPassword" class="col-form-label">Password</label>
             <input type="password" id="inputPassword" class="form-control" name="password">
         </div>
+
+        <p th:if="${errorMessage}" class="error" th:text="${errorMessage}"></p>
+
         <div>
             <button class="btn btn-secondary" type="button" onclick="location.href='/store-user/register'" >signup</button>
             <button class="btn btn-dark" type="submit">login</button>
@@ -30,6 +33,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </body>
 </html>
