--- a/store-admin/src/main/resources/templates/user/register.html
+++ b/store-admin/src/main/resources/templates/user/register.html
@@ -6,12 +6,12 @@
     <title>로그인</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/user.css}">
-
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script th:inline="javascript">
         $(document).ready(function(){
             var errorMessage = [[${errorMessage}]];
             if(errorMessage != null){
-                alert(errorMessage);
+                alert(errorMessages.replaceAll(',','\n'));
             }
         });
     </script>
@@ -21,20 +21,26 @@
     <span class="logo">Delivery</span>
     <span class="logo">-STORE-</span>
     <span>회원가입</span>
-    <form action="/open-api/store-user/register" method="post">
+    <form action="/open-api/store-user/register" role="form" method="post" th:object="${storeUserRegisterRequest}">
         <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
         <div class="userInput">
             <label  class="col-form-label">email</label>
             <input type="email" class="form-control" name="email">
         </div>
+        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="error">Incorrect data</p>
+
         <div class="userInput">
             <label class="col-form-label">Password</label>
             <input type="password"  class="form-control" name="password">
         </div>
+        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="error">Incorrect data</p>
+
+
         <div class="userInput">
             <label class="col-form-label">Store Name</label>
             <input type="text" class="form-control" name="storeName">
         </div>
+        <p th:if="${#fields.hasErrors('storeName')}" th:errors="*{storeName}" class="error">Incorrect data</p>
 
         <div>
             <button class="btn btn-secondary" type="submit" >signup</button>
