--- a/store-admin/src/main/resources/templates/user/login.html
+++ b/store-admin/src/main/resources/templates/user/login.html
@@ -25,8 +25,7 @@
 
         <p th:if="${errorMessage}" class="error" th:text="${errorMessage}"></p>
 
-        <div>
-            <button class="btn btn-secondary" type="button" onclick="location.href='/store-user/register'" >signup</button>
+        <div class="text-center">
             <button class="btn btn-dark" type="submit">login</button>
         </div>
     </form>
