--- a/store-admin/src/main/resources/templates/fragments/header.html
+++ b/store-admin/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,10 @@
         <a class="logo" href="/store-order">Delivery</a>
             <ul>
                 <li sec:authorize="hasAnyAuthority('ROLE_MASTER')">
-                    <a class="navLink" th:href="@{/master/store}">가게 등록</a>
+                    <a class="navLink" th:href="@{/master/store/register}">가게 등록</a>
+                </li>
+                <li sec:authorize="hasAnyAuthority('ROLE_MASTER')">
+                    <a class="navLink" th:href="@{/master/store-user/register}">사용자 등록</a>
                 </li>
                 <li sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
                     <a class="navLink" th:href="@{/store-order}">주문 관리</a>
