--- a/store-admin/src/main/resources/templates/store/menuRegister.html
+++ b/store-admin/src/main/resources/templates/store/menuRegister.html
@@ -14,6 +14,13 @@
 
 <th:block layout:fragment="script">
     <script th:inline="javascript">
+        $(document).ready(function(){
+            var errorMessage = [[${errorMessage}]];
+            if(errorMessage != null){
+                alert(errorMessage.replaceAll(',','\n'));
+            }
+        });
+
     function bindDomEvent(){
         $(".custom-file-input").on("change", function() {
             var fileName = $(this).val().split("\\").pop();  //이미지 파일명
@@ -51,7 +58,7 @@
         <div class="form-group" >
             <div class="custom-file img-div">
                 <input type="file" class="custom-file-input" name="menuImgFile">
-                <label class="custom-file-label" th:text="메뉴이미지"></label>
+                <label class="custom-file-label" >메뉴이미지</label>
             </div>
         </div>
         <div style="text-align: center">
