fix: order list desc, sse 알림 시 페이지 새로고침

--- a/store-admin/src/main/resources/templates/order/orderList.html
+++ b/store-admin/src/main/resources/templates/order/orderList.html
@@ -32,9 +32,7 @@
             )
 
             let result = alert(message);
-            if(result){
-                acceptOrder(data.user_order_response.id);
-            }
+            location.reload();
         }
     </script>
     <script type="text/javascript" th:src="@{/js/order.js}"></script>
