--- a/store-admin/src/main/resources/templates/store/menuRegister.html
+++ b/store-admin/src/main/resources/templates/store/menuRegister.html
@@ -14,12 +14,6 @@
 
 <th:block layout:fragment="script">
     <script th:inline="javascript">
-        $(document).ready(function(){
-            var errorMessage = [[${errorMessage}]];
-            if(errorMessage != null){
-                alert(errorMessage.replaceAll(',','\n'));
-            }
-        });
 
     function bindDomEvent(){
         $(".custom-file-input").on("change", function() {
@@ -49,12 +43,14 @@
             </div>
             <input type="text" th:field="*{name}" class="form-control" placeholder="메뉴 이름을 입력해주세요">
         </div>
+        <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="error">Incorrect data</p>
         <div class="input-group">
             <div class="input-group-prepend">
                 <span class="input-group-text">가격</span>
             </div>
             <input type="text" th:field="*{price}" class="form-control" placeholder="메뉴의 가격을 입력해주세요">
         </div>
+        <p th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="error">Incorrect data</p>
         <div class="form-group" >
             <div class="custom-file img-div">
                 <input type="file" class="custom-file-input" name="menuImgFile">
