--- a/store-admin/src/main/resources/templates/user/register.html
+++ b/store-admin/src/main/resources/templates/user/register.html
@@ -20,7 +20,7 @@
 <div class="container">
     <span class="logo">Delivery</span>
     <span class="logo">-STORE-</span>
-    <span>회원가입</span>
+    <span>회원등록</span>
     <form action="/master/store-user/register" role="form" method="post" th:object="${storeUserRegisterRequest}">
         <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
         <div class="userInput">
